# storeManager

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  ship.bat  ship.command  start.bat  start.command
scripts/: ship.mjs  test_date_parse.mjs  test_ocr_parse.mjs
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  ocr_paddle.py  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: auth.rs  drive.rs  lib.rs  main.rs
src/components/: BrandLoader.tsx  CalculatorWidget.tsx  ChatInput.tsx  EmployeeForm.tsx  EmployeeReportWidget.tsx  EmployeeTile.tsx  ImageUploader.tsx  LoginScreen.tsx  ProductChartWidget.tsx  ProductConfirm.tsx  ProductTile.tsx  ReadmePanel.tsx  ReportMenuWidget.tsx  ReportWidget.tsx  SalaryPeriodWidget.tsx  SalesTrendWidget.tsx  SellWidget.tsx  SetupScreen.tsx  SuggestionChips.tsx  SupplierReportWidget.tsx
src/lib/: ai.ts  auth.ts  commands.ts  db.ts  employeeDb.ts  ocr.ts  supplierDb.ts
src/utils/: nanoid.ts  sound.ts
