[package]
name = "storemanager"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "storemanager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lancedb = "0.16"
arrow-array = "53"
arrow-schema = "53"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
tesseract = "0.14"
base64 = "0.22"
